<resources>
    <string name="app_name">Fast Car</string>

    <string name="facebook_app_id">688196926667846</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="tt_zalopay">Thanh toán bằng ZaloPay</string>
    <string name="tt_momo">Thanh toán bằng Momo</string>
    <string name="tt_vnpay">Thanh toán bằng VnPay</string>
    <string name="tt">Thanh toán</string>

    <string name="ten_congty">Công ty cổ phần FastCar</string>
    <string name="diachi_congty">VP 06, tầng 8, Tòa Keangnam Landmark 72 Phạm Hùng, Nam Từ Liêm, Hà Nội</string>
    <string name="email_congty">fastcar@gmail.com</string>
    <string name="tele_congty">0968 686 868</string>
    <string name="fax_congty">0222 666 888 22</string>

    <string name="title_activity_bottom_navigation">BottomNavigation_Activity</string>
    <string name="title_khampha">Khám phá</string>
    <string name="title_noti">Thông báo</string>
    <string name="title_chuyenxe">Chuyến</string>
    <string name="title_hotro">Hỗ trợ</string>
    <string name="title_user">Cá nhân</string>

    <string name="dieukhoan">Quy định khác:\n
  - Sử dụng xe đúng mục đích.\n
  - Không sử dụng xe thuê vào mục đích phi pháp,trái pháp luật.\n
  - Không sử dụng xe thuê để cầm cố, thế chấp tài sản.\n
  - Không hút thuốc, nhả kẹo cao su, xả rác trong xe.\n
  - Không chở hàng cấm, dễ cháy nổ.\n
  - Không chở hoa quả, thực phẩm nặng mùi trong xe.\n
  - Khi trả xe, nếu xe bẩn hoặc có mùi trong xe, khách hàng vui lòng vệ sinh xe sạch sẽ hoặc gửi phụ thu phí vệ sinh xe.\n
Trân trọng cảm ơn quý khách. Chúc quý khách hàng có những chuyến đi tuyệt vời ! </string>

    <string name="goiyloinhan">Chào anh/chị chủ xe!\nTôi cần thuê xe của anh/chị để đi du lịch cùng gia đình với thời gian như trên.\nTôi có đầy đủ giấy tờ thuê xe và tài sản thế chấp nếu anh/chị cần.\nAnh/Chị vui lòng báo giúp tình trạng xe sớm nhé. Cảm ơn anh/chị!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="values_range_seekbar">
        <item>10</item>
        <item>60</item>
    </string-array>
</resources>