<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.act_bottom.HoTro_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="-22dp"
                android:src="@drawable/img_vinfast_telephone_v1" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                android:layout_marginTop="-20dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F6F8"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Liên hệ FASTCAR"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Hãy liên lạc với chúng tôi bất cứ khi nào bạn cần hỗ trợ"
                        android:textSize="14dp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="Thông tin công ty"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_building_greeen"
                        android:drawablePadding="10dp"
                        android:padding="5dp"
                        android:gravity="center"
                        android:text="@string/ten_congty"
                        android:textColor="@color/black"
                        android:textSize="16dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_location_green"
                        android:drawablePadding="10dp"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/diachi_congty"
                        android:textColor="@color/black"
                        android:textSize="16dp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_email_green"
                        android:drawablePadding="10dp"
                        android:padding="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/email_congty"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:drawableLeft="@drawable/icon_telephone_green"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/tele_congty"
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F4F6F8"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_hotline_html"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Cần hỗ trợ nhanh vui lòng gọi hotline: \n0222 666 888 22 hoặc gửi tin nhắn cho chúng tôi."
                        android:textColor="@color/black"
                        android:textSize="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_call_to_hotline"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/custom_btn3"
                            android:drawableLeft="@drawable/icon_call"
                            android:paddingStart="10dp"
                            android:text="Gọi"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_send_message_to_hotline"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_btn8"
                            android:drawableLeft="@drawable/icon_message"
                            android:paddingStart="10dp"
                            android:text="Nhắn tin"
                            android:textAllCaps="false"
                            android:textColor="@color/button_green"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="tab3_to_tab1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_home_black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="tab3_to_tab2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_truck_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_telephone_green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hotro"
                android:textColor="@color/button_green"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="tab3_to_tab4"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_user_black" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>


